fix button color on dark mode

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -169,10 +169,10 @@ body.dark-mode {
   }
 
   a {
-    color: #deebf3;
+    color: #6e9bf3;
   }
   a:hover, a:focus {
-    color: #cedbf3;
+    color: #4e7bf3;
   }
 
   blockquote {
@@ -235,8 +235,8 @@ body.dark-mode {
   }
 
   .btn-primary {
-    background-color: #deebf3;
-    border-color: #cedbf3;
+    background-color: #6e9bf3;
+    border-color: #4e6bf3;
   }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background-color: #80bfff !important;
